--- a/horriblefilm/templates/base.html
+++ b/horriblefilm/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}YOUR FUCKIN MOM{% endblock title %}</title>
+    <title>{% block title %}Horrible Film{% endblock title %}</title>
 </head>
 
 <body>
