--- a/horriblefilm/templates/base.html
+++ b/horriblefilm/templates/base.html
@@ -5,9 +5,42 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Horrible Film{% endblock title %}</title>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
 </head>
 
 <body>
+
+<header>
+    <nav class="navbar navbar-dark" style="background-color: #3CB371">
+        <a class="navbar-brand" href="#">Horrible Film</a>
+        <ul class="nav navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url "home" %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
+        </ul>
+        <ul class="nav navbar-nav pull-xs-right">
+            {% if not request.user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url "registration_register" %}">Register</a>
+            </li>
+            {% endif %}
+        </ul>
+        <form class="form-inline pull-xs-right">
+
+        </form>
+    </nav>
+</header>
+
 {% block content %}{% endblock content %}
 </body>
 </html>
