--- a/horriblefilm/templates/index.html
+++ b/horriblefilm/templates/index.html
@@ -1,1 +1,8 @@
-<h1>Welcome to Horrible Film!</h1>
+{% extends "base.html" %}
+
+{% block content %}
+    <div class="container jumbotron">
+        <h1>Welcome to Horrible Film!</h1>
+        <p>Where we make bad movies look good.</p>
+    </div>
+{% endblock content %}
