--- a/horriblefilm/templates/registration/registration_form.html
+++ b/horriblefilm/templates/registration/registration_form.html
@@ -1,3 +1,6 @@
+{% extends "base.html"%}
+
+{% block content %}
 <h1>Sign Up</h1>
 
 
@@ -8,3 +11,5 @@
     <input type=submit value='Sign Up' />
 </form>
 </section>
+
+{% endblock content %}
