--- a/horriblefilm/templates/base.html
+++ b/horriblefilm/templates/base.html
@@ -6,23 +6,21 @@
     <meta charset="UTF-8">
     <title>{% block title %}Horrible Film{% endblock title %}</title>
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <link href='https://fonts.googleapis.com/css?family=Noto+Sans:700' rel='stylesheet' type='text/css'>
     <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
+
+    {% load static from staticfiles %}
+    <link rel="stylesheet" href="{% static "css/main.css" %}">
 </head>
 
 <body>
 
 <header>
     <nav class="navbar navbar-dark" style="background-color: #3CB371">
-        <a class="navbar-brand" href="#">Horrible Film</a>
+        <a class="navbar-brand" style="font-family: 'Noto Sans'" href="{% url "home" %}">Horrible Film</a>
         <ul class="nav navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url "home" %}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
