--- a/horriblefilm/templates/base.html
+++ b/horriblefilm/templates/base.html
@@ -5,12 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Horrible Film{% endblock title %}</title>
+    {% load static from staticfiles %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
     <link href='https://fonts.googleapis.com/css?family=Noto+Sans:700' rel='stylesheet' type='text/css'>
     <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
-
-    {% load static from staticfiles %}
     <link rel="stylesheet" href="{% static "css/main.css" %}">
+
 </head>
 
 <body>
@@ -40,5 +41,6 @@
 </header>
 
 {% block content %}{% endblock content %}
+
 </body>
 </html>
