--- a/horriblefilm/static/css/main.css
+++ b/horriblefilm/static/css/main.css
@@ -2,6 +2,16 @@
      background: lightgrey;
  }
 
+ p {
+          font-family: 'Noto Sans'
+ }
+
  .navbar {
      margin-bottom: 10px;
+ }
+
+
+  .navbar-brand img {
+      margin-top: -20px;
+      margin-bottom: -20px;
  }
