--- a/horriblefilm/templates/base.html
+++ b/horriblefilm/templates/base.html
@@ -8,7 +8,7 @@
     {% load static from staticfiles %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-    <link href='https://fonts.googleapis.com/css?family=Noto+Sans:700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
     <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
     <link rel="stylesheet" href="{% static "css/main.css" %}">
 
@@ -17,8 +17,10 @@
 <body>
 
 <header>
-    <nav class="navbar navbar-dark" style="background-color: #3CB371">
-        <a class="navbar-brand" style="font-family: 'Noto Sans'" href="{% url "home" %}">Horrible Film</a>
+    <nav class="navbar navbar-dark bg-primary" >
+        <a class="navbar-brand" href="{% url "home" %}">
+            <img src="{% static "img/logo.png" %}">
+        </a>
         <ul class="nav navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url "home" %}">Home <span class="sr-only">(current)</span></a>
