Fixed the main page sign up button

--- a/horriblefilm/templates/index.html
+++ b/horriblefilm/templates/index.html
@@ -6,6 +6,6 @@
         <p class="lead">Where we make bad movies look good.</p>
 
         <hr/>
-        <p>What are you waiting for? <button src="{% url "registration_register" %}" class="btn btn-success">Join us here</button></p>
+        <p>What are you waiting for? <a href="{% url "registration_register" %}" class="btn btn-success">Join us here</a></p>
     </div>
 {% endblock content %}
