--- a/horriblefilm/templates/base.html
+++ b/horriblefilm/templates/base.html
@@ -26,6 +26,9 @@
                 <a class="nav-link" href="{% url "home" %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="#">Films</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
             </li>
         </ul>
