--- a/horriblefilm/templates/base.html
+++ b/horriblefilm/templates/base.html
@@ -17,7 +17,7 @@
 <body>
 
 <header>
-    <nav class="navbar navbar-dark bg-primary" >
+    <nav class="navbar navbar-dark bg-primary">
         <a class="navbar-brand" href="{% url "home" %}">
             <img src="{% static "img/logo.png" %}">
         </a>
@@ -33,10 +33,22 @@
             </li>
         </ul>
         <ul class="nav navbar-nav pull-xs-right">
-            {% if not request.user.is_authenticated %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url "registration_register" %}">Register</a>
-            </li>
+            {% if request.user.is_authenticated %}
+                <li class="nav-item btn-group">
+                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu1"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{ request.user.username }}
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                        <a class="dropdown-item"
+                           href="{% url 'user-profile' username=request.user.username %}">Profile</a>
+                        <a class="dropdown-item" href="{% url 'auth_logout' %}">Logout</a>
+                    </div>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "auth_login" %}">Login</a>
+                </li>
             {% endif %}
         </ul>
         <form class="form-inline pull-xs-right">
