--- a/horriblefilm/templates/users/userprofile_detail.html
+++ b/horriblefilm/templates/users/userprofile_detail.html
@@ -1,13 +1,21 @@
-{%  extends "base.html" %}
+{% extends "base.html" %}
 
 
 {% block title %}{{ user_profile.user.username }}{% endblock title %}
 
 
 {% block content %}
-    <h3>{{ user_profile.user.username }}</h3>
+    <div class="container">
+        <h1>
+            {{ user_profile.user.username }}
+            {% if user_profile.user.username == request.user.username %}
+                <a href="{% url 'edit-profile' %}" class="btn btn-success">Edit Profile</a>
+            {% endif %}
+        </h1><br/><br/>
 
-    <p>
-        {{ user_profile.about_me }}
-    </p>
+        <h3>About Me</h3>
+        <div class="jumbotron">
+            <p>{{ user_profile.about_me }}</p>
+        </div>
+    </div>
 {% endblock content %}
