--- a/horriblefilm/templates/users/userprofile_form.html
+++ b/horriblefilm/templates/users/userprofile_form.html
@@ -1,9 +1,23 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load form_styles %}
 
 {% block content %}
-    <form action=. method="post">
-    {% csrf_token %}
-    {{ form.as_ul }}
-    <input type="submit" value="Submit"/>
-    </form>
+
+    <div class="container">
+        <div class="col-sm-6 jumbotron">
+            <h1>Edit Profile</h1>
+            <hr/>
+            <form role="form" class="form-horizontal" method="post" action=.>
+                {% csrf_token %}
+                {% for field in form %}
+                    <fieldset class="form-group">
+                        <label for="{{ field.html_name }}">{{ field.label }}</label>
+                        {{ field | add_css:"form-control" }}
+                    </fieldset>
+                {% endfor %}
+                <br/>
+                <input type="submit" class="btn btn-primary" value="Submit"/>
+            </form>
+        </div>
+    </div>
 {% endblock content %}
